tests/NormalTests/paczka1/small_fuzzy/35896808.err
Error in line 3: npSGGk A495 82,4
Error in line 14: S598 A118 85,7
